# spectral-technical-exam

./: README.md  docker-compose.yaml
grpc_client_http/: Dockerfile  pyproject.toml
grpc_client_http/src/: main.py  models.py  settings.py  utils.py
grpc_client_http/src/tests/: test_get_meterusage_data.py
grpc_server/: Dockerfile  pyproject.toml
grpc_server/src/: database.py  main.py  service.py  utils.py
grpc_server/src/tests/: test_service.py
integration_tests/: pyproject.toml  test_microservices.py
protobufs/: meterusage.proto
protobufs/compiled/: meterusage_pb2.py  meterusage_pb2.pyi  meterusage_pb2_grpc.py
ui/: index.html
